<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HotelDetailsActivity"
    tools:showIn="@layout/activity_hotel_details">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="1dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp" >
        <TableRow android:background="#0079D6" android:padding="5dp"/>

        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:background="#0079D6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/name" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="15dp"
                android:layout_weight="1"
                android:id="@+id/hotelName"
                android:text="@string/hotel_name" />
        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:background="#0079D6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/phone" />

            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/hotelPhone"
                android:text="@string/hotel_phone" />
        </TableRow>

        <TableRow android:background="#DAE8FC" android:padding="5dp">
            <TextView
                android:background="#0079D6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/address" />

            <TextView
                android:layout_width="wrap_content"
                android:paddingLeft="15dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/hotelAddress"
                android:text="@string/hotel_address" />
        </TableRow>
    </TableLayout>
</androidx.constraintlayout.widget.ConstraintLayout>